--- a/inventory.ini
+++ b/inventory.ini
@@ -1,8 +1,8 @@
 [catalouge]
-172.31.26.71
+172.31.26.71         # One target host in the 'catalouge' group
 
 [frontend]
-172.31.19.36
+172.31.31.232        # One target host in the 'frontend' group
 
 [local]
-localhost
+localhost            # Localhost group (for testing or controller actions)
