--- a/06-functions.yaml
+++ b/06-functions.yaml
@@ -1,7 +1,15 @@
 - name: functions
   hosts: local
   connection: local
+  vars:
+    technologies: Devops, Linux, Shell, Ansible # String
   tasks:
   - name: default variable
     ansible.builtin.debug:
       msg: "Hello, {{ name | default('Ramesh')}}"
+
+
+# String to list
+- name: convert string into list
+  ansible.builtin.debug:
+    msg: "technologies are: {{ technologies | split(',') }}"
