--- a/06-functions.yaml
+++ b/06-functions.yaml
@@ -12,3 +12,7 @@
     - name: convert string into list
       ansible.builtin.debug:
         msg: "Technologies are: {{ technologies | split(',') }}"
+
+- name: convert map to list
+  ansible.builtin.debug:
+    msg: "Tags are: {{ tags | dict2items }} "
