--- a/06-functions.yaml
+++ b/06-functions.yaml
@@ -16,3 +16,7 @@
 - name: convert map to list
   ansible.builtin.debug:
     msg: "Tags are: {{ tags | dict2items }} "
+
+- name: convert list to map
+  ansible.builtin.debug:
+    msg: "Tags are: {{ listTags | item2dict }}"
