--- a/06-functions.yaml
+++ b/06-functions.yaml
@@ -4,19 +4,19 @@
   vars:
     technologies: Devops, Linux, Shell, Ansible  # String
   tasks:
-    - name: default variable
-      ansible.builtin.debug:
+- name: default variable
+  ansible.builtin.debug:
         msg: "Hello, {{ name | default('Ramesh') }}"
 
     # String to list
-    - name: convert string into list
-      ansible.builtin.debug:
+- name: convert string into list
+  ansible.builtin.debug:
         msg: "Technologies are: {{ technologies | split(',') }}"
 
-- name: convert map to list
+- name: convert map into list
   ansible.builtin.debug:
     msg: "Tags are: {{ tags | dict2items }} "
 
-- name: convert list to map
+- name: convert list into map
   ansible.builtin.debug:
-    msg: "Tags are: {{ listTags | item2dict }}"
+    msg: "Tags are: {{ listTags | items2dict }}"
