--- a/01-playbook.yaml
+++ b/01-playbook.yaml
@@ -1,6 +1,6 @@
 - name: ping the server
   hosts: frontend #which server you're connecting
-# list of tasks/collections of modules
+# list of tasks/collections/ modules
   tasks:
 - name: ping
   ansible.builtin.ping:
