--- a/03-multi-play.yaml
+++ b/03-multi-play.yaml
@@ -1,14 +1,14 @@
-# play is nothing but list of tasks executed on the server
+# playbook is a list of plays
 - name: Play-01
   hosts: frontend
   tasks:
     - name: play-01 and task-01
       ansible.builtin.debug:
-       msg: "This is play-01 and task-01"
+        msg: "This is play-01 and task-01"
 
 - name: Play-02
   hosts: frontend
   tasks:
     - name: play-02 and task-02
       ansible.builtin.debug:
-       msg: "This is play-02 and task-02"
+        msg: "This is play-02 and task-02"
