--- a/03-multi-play.yaml
+++ b/03-multi-play.yaml
@@ -1,14 +1,23 @@
-# playbook is a list of plays
-- name: Play-01
-  hosts: frontend
-  tasks:
-    - name: play-01 and task-01
-      ansible.builtin.debug:
-        msg: "This is play-01 and task-01"
+# play is nothing but list of tasks executed on the server
 
-- name: Play-02
+- name: PLAY-01
   hosts: frontend
   tasks:
-    - name: play-02 and task-02
+    - name: PLAY-01 and TASKS-01
       ansible.builtin.debug:
-        msg: "This is play-02 and task-02"
+        msg: "Hello from PLAY-01 and TASKS-01"
+
+    - name: PLAY-01 and TASKS-02
+      ansible.builtin.debug:
+        msg: "Hello from PLAY-01 and TASKS-02"
+
+- name: PLAY-02
+  hosts: backend
+  tasks:
+    - name: PLAY-02 and TASKS-01
+      ansible.builtin.debug:
+        msg: "Hello from PLAY-02 and TASKS-01"
+
+    - name: PLAY-02 and TASKS-02
+      ansible.builtin.debug:
+        msg: "Hello from PLAY-02 and TASKS-02"
