--- a/inventory.ini
+++ b/inventory.ini
@@ -6,3 +6,8 @@
 
 [local]
 localhost            # Localhost group (for testing or controller actions)
+
+[local:vars]
+COURSE=DevOps With AWS
+DURATION=10HRS
+TRAINER=SivaKumar Reddy
