--- a/14-install-packages using loop.yaml
+++ b/14-install-packages using loop.yaml
@@ -19,7 +19,7 @@
   connection: local
   become: yes
   tasks:
-    - name: uninstall multiple packages
+    - name: uninstall packages
       ansible.builtin.package:
       name: "{{ item.name }}"
       state: "{{item.state }}"
