--- a/14-install-packages using loop.yaml
+++ b/14-install-packages using loop.yaml
@@ -19,10 +19,10 @@
   connection: local
   become: yes
   tasks:
-    - name: uninstall packages
+    - name: uninstall multiple packages
       ansible.builtin.package:
-      name: "{{ item.name }}"
-      state: "{{item.state }}"
+       name: "{{ item.name }}"
+       state: "{{item.state }}"
       loop:
         - { name: "nginx", state: "absent" }
         - { name: "mysql", state: "latest" }
