--- a/inventory.ini
+++ b/inventory.ini
@@ -1,3 +1,5 @@
+# inventorty.ini is a host file which tells the ansible about the target hosts and connection details
+
 [catalouge]
 172.31.26.71         # One target host in the 'catalouge' group
 
