--- a/15-functions.yaml
+++ b/15-functions.yaml
@@ -1,7 +1,14 @@
 - name: fuctions
   hosts: local
   connection: local
+  vars:
+    fruits: apple, mango, banana # string
   tasks:
   - name: default variables
     ansible.builtin.debug:
      msg: "Hello, {{ name | default('Pavan') }}"
+
+  # string to list
+  - name: string to list
+    ansible.builtin.debug:
+      msg: "Fruits are: {{ fruits.split(',') }}"
