--- a/16-error handling.yaml
+++ b/16-error handling.yaml
@@ -11,3 +11,7 @@
   - name: print a message
     ansible.builtin.debug:
       msg: "{{ user_output }}"
+
+  - name: create a user
+    ansible.builtin.command: useradd roboshop
+    when: user_output.rc != 0
